--- a/Kotlin_Maven3/pom.xml
+++ b/Kotlin_Maven3/pom.xml
@@ -11,24 +11,26 @@
   <properties>
     <!-- Global properties -->
     <java.version>1.8</java.version>
-    <kotlin.version>1.2.40</kotlin.version>
+    <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
     <kotlin.coroutines.version>0.22.5</kotlin.coroutines.version>
+    <kotlin.version>1.2.40</kotlin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <main.class>com.test.Main</main.class>
 
     <!-- dependency versions -->
-    <junit.version>4.12</junit.version>
+    <junit.version>5.1.1</junit.version>
     <logback.version>1.2.3</logback.version>
     <slf4j.version>1.7.25</slf4j.version>
 
     <!-- plugin versions -->
     <dokka-maven-plugin.version>0.9.16</dokka-maven-plugin.version>
     <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
-    <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
+    <junit-platform-surefire-provider.version>1.1.1</junit-platform-surefire-provider.version>
     <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
-    <maven-failsafe-plugin.version>2.21.0</maven-failsafe-plugin.version>
+    <maven-failsafe-plugin.version>${maven-surefire-plugin.version}</maven-failsafe-plugin.version>
     <maven-shade-plugin.version>3.1.0</maven-shade-plugin.version>
+    <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
 
   </properties>
 
@@ -55,8 +57,8 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
@@ -110,6 +112,17 @@
         </configuration>
       </plugin>
       <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire-plugin.version}</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-surefire-provider</artifactId>
+            <version>${junit-platform-surefire-provider.version}</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>${maven-failsafe-plugin.version}</version>
@@ -121,6 +134,13 @@
             </goals>
           </execution>
         </executions>
+        <dependencies>
+          <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-surefire-provider</artifactId>
+            <version>${junit-platform-surefire-provider.version}</version>
+          </dependency>
+        </dependencies>
       </plugin>
       <plugin>
         <groupId>org.jetbrains.kotlin</groupId>
